# rust-entro-shift

./: Cargo.toml  README.md
examples/: test_entro_shift.rs
src/: entro_shift.rs  lib.rs
