[package]
authors = ["Will Parsons <https://www.linkedin.com/in/twexxor/>"]
categories = ["algorithms", "embedded-development", "game-development", "no-std"]
description = "Entro Shift is a 32-bit pseudo-random number generator algorithm."
documentation = "https://github.com/twexxor/rust-entro-shift/README.md"
homepage = "https://entrocraft.com/dungeon/randomization-algorithms/entro-shift/"
keywords = ["generate", "generation", "generator", "prng", "random", "random-numbers", "randomize", "randomizer", "rng"]
license = "MIT"
name = "entro-shift"
repository = "https://github.com/twexxor/rust-entro-shift"
version = "1.0.0"
